# mailer

./: .env.mysql  .env.postgresql  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  env.conf.example  env.example  env.vm.example  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  extensions.py
app/config/: __init__.py  database.py  development.py  production.py
app/data/migrations/mysql/: alembic.ini  env.py  script.py.mako
app/data/migrations/mysql/versions/: 9dc872a04844_initial_database_schema.py
app/data/migrations/postgresql/: alembic.ini  env.py
app/data/migrations/postgresql/versions/: a4887af5f132_initial_database_schema.py
app/data/migrations/sqlite/: alembic.ini  env.py
app/data/migrations/sqlite/versions/: 2a49b893a7c6_initial_database_schema.py
app/extensions/: __init__.py  auth.py  blueprints.py  config.py  core.py  data_dirs.py  database.py  error_handlers.py  limiter.py  logging.py  monitoring.py  sessions.py  templates.py
app/main/: routes.py
app/models/: __init__.py
app/modules/auth/: __init__.py  forms.py  routes.py
app/modules/dashboard/: __init__.py  routes.py
app/modules/errors/: __init__.py  routes.py
app/modules/ldap/: __init__.py  routes.py
app/modules/mail/: __init__.py  routes.py
app/modules/main/: __init__.py  routes.py
app/modules/system/: __init__.py  routes.py
app/templates/: base.html  simple.html
app/templates/components/: modal.html
app/templates/errors/: 401.html  403.html  404.html  405.html  418.html  422.html  500.html
app/templates/modules/auth/: change_password.html  login.html
app/templates/modules/dashboard/: domain_detail.html  domains.html  index.html  logs.html  new_domain.html  new_user.html  system.html  users.html
app/templates/modules/ldap/: index.html
app/templates/modules/mail/: dovecot.html  index.html  postfix.html  queue.html
app/templates/modules/main/: about.html  index.html  status.html
app/templates/modules/system/: configuration.html  index.html  logs.html  status.html
app/utils/: ldap_manager.py  logging_utils.py  mail_manager.py  navigation.py
deploy/: app.conf.example  env.conf.example
deploy/apache/: dreamlikelabs-proxy.conf  dreamlikelabs.conf  dreamlikelabs.wsgi
deploy/init.d/: dreamlikelabs
deploy/nginx/: dreamlikelabs-proxy.conf
deploy/systemd/: dreamlikelabs.service
docs/: API_ENDPOINTS.md  CHANGELOG_DETAILED.md  DATABASE_CONFIGURATION.md  DATABASE_MANAGEMENT.md  DATABASE_SCRIPTS.md  Project_Overview.md  README_macos.md  TROUBLESHOOTING.md  UI_NAVIGATION.md  VM_DEPENDENCY_GUIDE.md  VM_DEVELOPMENT_WORKFLOW.md  WEB_ENDPOINTS.md  database.md  development_roadmap.md  development_roadmap_checklist.md  directory_structure.md
docs/installers/: README_debian.md  README_macos.md  README_redhat.md
installers/: debian_install.sh  macos_install.sh  redhat_install.sh
migrations/mysql/: env.py
migrations/postgresql/: env.py
migrations/sqlite/: env.py
scripts/: clean_pycache.sh  create_admin.py  create_admin.sh  create_vm_admin.py  deploy_to_vm.sh  fix_permissions.sh  fix_vm_dependencies.sh  init_db.py  init_db.sh  init_vm_db.py  init_vm_db.sh  install_vm_dependencies.sh  manage_db.py  migrate_all.py  push_to_all_repos.sh  quick_test_data.py  seed_test_data.py  setup_dev_environment.sh  sync_all_databases.py  sync_to_vm.sh  test_vm_app.py  test_vm_env.py  troubleshoot_vm_db.sh
tests/: __init__.py  conftest.py  test_auth.py  test_dashboard.py  test_mail.py
