[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "postfix-manager"
dynamic = ["version"]
description = "A comprehensive web interface for managing Postfix, Dovecot, and OpenLDAP mail servers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "DreamlikeLabs", email = "info@dreamlikelabs.com"}
]
maintainers = [
    {name = "DreamlikeLabs", email = "info@dreamlikelabs.com"}
]
keywords = ["postfix", "dovecot", "ldap", "mail", "server", "management", "web", "interface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "Flask>=2.0.0,<3.0.0",
    "Flask-Bcrypt>=1.0.1,<2.0.0",
    "Flask-Limiter>=3.0.0,<4.0.0",
    "Flask-Migrate>=3.0.0,<4.0.0",
    "Flask-SQLAlchemy>=2.5.0,<3.0.0",
    "Flask-WTF>=1.0.0,<2.0.0",
    "Jinja2>=3.0.0,<4.0.0",
    "SQLAlchemy>=1.4.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-json-logger>=2.0.0,<3.0.0",
    "waitress>=2.0.0,<3.0.0",
    "requests>=2.25.0,<3.0.0",
    "packaging>=20.0,<26.0",
    "ldap3>=2.9.0,<3.0.0",
    "psutil>=5.8.0,<6.0.0",
    "python-ldap>=3.3.0,<4.0.0",
    "cryptography>=3.4.0,<43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
production = [
    "gunicorn>=20.0",
    "supervisor>=4.0",
]

[project.urls]
Homepage = "https://github.com/dreamlikelabs/postfix-manager"
Documentation = "https://github.com/dreamlikelabs/postfix-manager/wiki"
Repository = "https://github.com/dreamlikelabs/postfix-manager"
"Bug Tracker" = "https://github.com/dreamlikelabs/postfix-manager/issues"

[project.scripts]
postfix-manager = "run:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.html", "**/*.css", "**/*.js", "**/*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
